Final touches and fixes for 3.1.2 stable